Update z-index issues
Thanks, Dan Waz!

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -676,7 +676,8 @@ a:visited:hover {
   border-bottom: 1px dotted;
 }
 .hero__title.is-active {
-  position: static;
+  position: relative;
+  z-index: 2;
   opacity: 1;
   -webkit-transition: opacity 0.125s ease-in;
   -moz-transition: opacity 0.125s ease-in;
@@ -685,7 +686,7 @@ a:visited:hover {
 }
 .hero__button {
   position: relative;
-  z-index: 2;
+  z-index: 3;
   float: right;
 }
 /* ==========================================================================
